# optiswarmcf-sdk

./: .gitignore  README.md
backend_ros2/src/cf_bridge/: info.txt  package.xml  setup.cfg  setup.py
backend_ros2/src/cf_bridge/cf_bridge/: client.py  config.py  node.py
backend_ros2/src/cf_bridge/config/: cf_bridge.yaml
backend_ros2/src/cf_bridge/launch/: cf_bridge.launch.py
backend_ros2/src/cf_bridge/resource/: cf_bridge
backend_ros2/src/mocap_bridge_ros2/: package.xml  setup.cfg  setup.py
backend_ros2/src/mocap_bridge_ros2/config/: mocap.yaml
backend_ros2/src/mocap_bridge_ros2/launch/: mocap_bridge.launch.py
backend_ros2/src/mocap_bridge_ros2/mocap_bridge_ros2/: config.py  node.py  normalize.py  utils_frames.py
backend_ros2/src/mocap_bridge_ros2/resource/: mocap_bridge_ros2
backend_ros2/src/opti_bridge/: package.xml  setup.cfg  setup.py
backend_ros2/src/opti_bridge/config/: opti_config.yaml
backend_ros2/src/opti_bridge/launch/: opti_bridge.launch.py
examples/: first_ex.py  first_ex_cf.py  first_ex_new.py  first_ex_opti.py  goto_comeback.py  goto_test.py  potential_field_swarm.py  swarm_ex.py  test_manual_takeoff.py  test_sdk_swarm_goto.py  test_swarmSDK_takeoff.py  test_swarm_takeoff.py
scripts/: build_backend.sh  run_experiment.sh  setup_sdk.sh  show_logs.sh  stop_backend.sh  usage_info_manual.txt  usage_info_script.txt
sdk/: pyproject.toml
sdk/src/optiswarmcf/: __init__.py  backend_orch.py  context.py  crazyflie.py  diagnostics.py  models.py  optitrack.py  swarm.py
test/: fakeCfBridge.py  fakeOptiBridge.py  test1.py  test2.py
(+5 files in other folders)
