[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optiswarmcf"
version = "0.1.0"
description = "Minimal SDK to control Crazyflie swarms via ROS2 backend (I/O only)."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]