<?xml version="1.0"?>
<package format="3">
  <name>mocap_bridge_ros2</name>
  <version>0.1.0</version>
  <description>Minimal OptiTrack MoCap bridge (VRPN) publishing ROS2 PoseStamped topics.</description>

  <maintainer email="you@gmail.com">you</maintainer>
  <license>MIT</license>



  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>